--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -40,19 +40,19 @@ font:
   size: 10
   # The normal (roman) font face to use.
   normal:
-    family: Source Code Pro
+  family: JetBrainsMono
     # Style can be specified to pick a specific face.
     style: Regular
 
   # The bold font face
   bold:
-    family: Source Code Pro
+  family: JetBrainsMono
     # Style can be specified to pick a specific face.
     style: Bold
 
   # The italic font face
   italic:
-    family: Source Code Pro
+  family: JetBrainsMono
     # Style can be specified to pick a specific face.
     style: Italic
 
